[SITE] route: make it simpler
Using special routes just for public, not for internal edition

--- a/Site/Presentation/Views/Season/Author/Episode.cshtml
+++ b/Site/Presentation/Views/Season/Author/Episode.cshtml
@@ -1,5 +1,5 @@
-﻿@using Presentation
-@using Presentation.Models.General
+﻿@using Presentation.Models.General
+@using Structure.Helpers
 @model Presentation.Models.SeasonEditEpisodeModel
 
 @{
@@ -46,7 +46,10 @@
 			<div class="titleChange">
 				<button type="submit" class="darkback save">Save</button>
 
-				@Html.Link("Upload", RouteConfig.Names.Upload, Model.Story.Season.ID, Model.Story.ID, "_", new {@class = "darkback save", target = "_blank"})
+				@Html.ActionLink("Upload",
+					"Upload", "Upload",
+					RouteStories.With(Model.Story.Season.ID, Model.Story.ID, "_"),
+					new { @class = "darkback save", target = "_blank" })
 
 				@Html.TextBoxFor(m => m.Story.Title)
 
