--- a/Site/Presentation/Views/Season/Author/TalkPiece.cshtml
+++ b/Site/Presentation/Views/Season/Author/TalkPiece.cshtml
@@ -1,27 +1,53 @@
-﻿@using Presentation
+﻿@using Structure.Helpers
 @model Presentation.Models.SeasonEditEpisodeModel
 
-@{var piece = Model.Story.SceneList[Model.SceneCounter].TalkList[Model.TalkCounter].Pieces[Model.PieceCounter];}
+@{
+	var piece = Model.Story
+		.SceneList[Model.SceneCounter]
+		.TalkList[Model.TalkCounter]
+		.Pieces[Model.PieceCounter];
+
+	var route = RouteStories.With(null, null, Model.CurrentScene);
+	var adderUrl = HttpUtility.UrlDecode(
+		Url.Action("Adder", "Season", route)
+	);
+}
 
 <span class="paragraphPiece" id="Talk@(Model.TalkCounter)_Piece@(Model.PieceCounter)">
 	<span class="talk_@(piece.Style)">
 		@Html.TextBoxFor(m => m.Story.SceneList[Model.SceneCounter].TalkList[Model.TalkCounter].Pieces[Model.PieceCounter].Style, 
 			new { 
 				@class = "darkback auxi",
-				rel = ("scene" + Model.SceneCounter + "_talkStyle" + Model.TalkCounter + "_piece" + Model.PieceCounter), 
+				rel = (
+					"scene" + Model.SceneCounter 
+					+ "_talkStyle" + Model.TalkCounter 
+					+ "_piece" + Model.PieceCounter
+				), 
 				suggestion = "talkStyle", 
 				onfocus = "GetSuggestionBox(this)", 
 				onblur="ExitSuggestionBox(this)",
 				tabIndex = Model.TabIndex++
 			})
 
-		@Html.TextBoxFor(m => m.Story.SceneList[Model.SceneCounter].TalkList[Model.TalkCounter].Pieces[Model.PieceCounter].Text, 
+		@Html.TextBoxFor(m => m.Story
+			.SceneList[Model.SceneCounter]
+			.TalkList[Model.TalkCounter]
+			.Pieces[Model.PieceCounter].Text, 
 			new { 
 				@class = "text",
 				tabIndex = Model.TabIndex++
 			})
 	
-		<adder class="adderPiece" scene="@Model.SceneCounter" type="Piece" subtype="Talk" paragraph="@(Model.ParagraphCounter)" talk="@(Model.TalkCounter)" piece="@(Model.PieceCounter)" onclick="AddInputItem(this)" url="@HttpUtility.UrlDecode(Url.Route(RouteConfig.Names.Adder, null, null, Model.CurrentScene))">+</adder>
+		<adder
+			class="adderPiece"
+			scene="@Model.SceneCounter"
+			type="Piece"
+			subtype="Talk"
+			paragraph="@(Model.ParagraphCounter)"
+			talk="@(Model.TalkCounter)"
+			piece="@(Model.PieceCounter)"
+			onclick="AddInputItem(this)"
+			url="@adderUrl">+</adder>
 	</span>
 				
 	<div class="suggestionBox" id="scene@(Model.SceneCounter)_talkStyle@(Model.TalkCounter)_piece@(Model.PieceCounter)"></div>
