--- a/Site/Presentation/Assets/css/screen_Scene.css
+++ b/Site/Presentation/Assets/css/screen_Scene.css
@@ -14,13 +14,13 @@
 	}
 
 
-.sceneChanger
+.scene-changer
 {
 	padding: 0;
 	text-align: center;
 }
 
-.sceneChanger li
+.scene-changer li
 {
 	border: 1px solid #000;
 	display: inline-block;
@@ -29,7 +29,7 @@
 	cursor: pointer;
 }
 
-.sceneChanger .chosen
+.scene-changer .chosen
 {
 	background: #000;
 }
