--- a/Site/Presentation/Views/Shared/_Layout.cshtml
+++ b/Site/Presentation/Views/Shared/_Layout.cshtml
@@ -39,8 +39,7 @@
 		</div>
 
 		<div class="left">
-			<div class="head" onclick="location.href = '/';">
-			</div>
+			<a class="head" href="/"></a>
 
 			<div class="menu">
 				@Html.Partial("Partial/Menu")
