--- a/Site/Presentation/Assets/css/screen_Main.css
+++ b/Site/Presentation/Assets/css/screen_Main.css
@@ -7,7 +7,18 @@
 	margin: 8px;
 	min-height: 450px;
 }
+	.main p.title {
+		color: #800;
+	}
+
+	.main p.title .sub {
+		display: block;
+	}
 
 .paragraph {
 	line-height: 1.5;
+}
+
+#print {
+	display: none;
 }
