[SITE] chore: move files to right folders

--- a/Site/Presentation/Views/Season/Episode.cshtml
+++ b/Site/Presentation/Views/Season/Episode.cshtml
@@ -17,7 +17,7 @@
 		};
 }
 
-@Html.Partial("PrintHeaderAndFooter", Model.Story)
+@Html.Partial("Partial/PrintHeaderAndFooter", Model.Story)
 
 <p class="title">
 	@Model.Story.Title
