--- a/Site/Presentation/Views/Season/Episode.cshtml
+++ b/Site/Presentation/Views/Season/Episode.cshtml
@@ -107,6 +107,8 @@
 	}
 </div>
 
+@Html.Partial("Partial/PrintSummary", Model.Story)
+
 @Html.Partial("Partial/ChangeScene", topSelector)
 
 @Html.Partial("Partial/Sign")
