--- a/Site/Presentation/Views/Season/Partial/PrintHeaderAndFooter.cshtml
+++ b/Site/Presentation/Views/Season/Partial/PrintHeaderAndFooter.cshtml
@@ -7,7 +7,7 @@
 		: 0;
 }
 
-<div id="print" style="counter-reset: page @startPage">
+<div class="just-print" style="counter-reset: page @startPage">
 	<div id="header">
 		<div id="left">
 			MEAK @Model.Season@Model
