[SITE] print: change type check
The url user type is used to show edit mode. In edit mode, no print
was designed. Using the authenticated flag to print the hole season.

--- a/Site/Presentation/Views/Season/Partial/PrintHeaderAndFooter.cshtml
+++ b/Site/Presentation/Views/Season/Partial/PrintHeaderAndFooter.cshtml
@@ -1,8 +1,8 @@
-﻿@using Structure.Helpers
+﻿@using DK.MVC.Authentication
 @model Structure.Entities.System.Episode
 
 @{
-	var startPage = UrlUserType.IsAuthor()
+	var startPage = Authenticate.IsAuthenticated
 		? Model.PageStart
 		: 0;
 }
