[SITE] gender: add showing only some paragrahs
Mode [0] Default: show everything
Mode [1] No gender: show only paragrahs that shouldn't have gender
Mode [2] Just teller: show only pure teller paragraphs

Just for author

--- a/Site/Presentation/Assets/css/Author/screen_Form.css
+++ b/Site/Presentation/Assets/css/Author/screen_Form.css
@@ -4,7 +4,16 @@
 .absolute-header textarea
 {
 	background: none;
+}
+
+.main input
+{
 	width: 575px;
+}
+
+.main .no-adders input
+{
+	width: 650px;
 }
 
 .main .page input
@@ -80,22 +89,28 @@
 }
 
 
-
-
 #Story_Title
 {
 	width: 500px;
 }
 
 
-
+.main span.auxi,
 .main input.auxi
 {
 	width: 70px;
+	display: inline-block;
+}
+
+.main input.auxi {
 	border: 1px solid #999;
 }
 
-
+.main span.auxi
+{
+	padding: 2px;
+	opacity: 0.4;
+}
 
 .yellowSave
 {
