--- a/Site/Presentation/Views/Season/Author/Block.cshtml
+++ b/Site/Presentation/Views/Season/Author/Block.cshtml
@@ -1,4 +1,5 @@
-﻿@using Structure.Helpers
+﻿@using Presentation.Helpers
+@using Structure.Helpers
 @model Presentation.Models.SeasonEditEpisodeModel
 		   
 @{
@@ -15,9 +16,21 @@
 
 	var route = RouteStories.With(Model.Story.Season, Model.Story, block);
 	var html = new { id = formId };
+
+	var blockClass = "block";
+
+	if (block.ID == Model.ReadingBlock)
+	{
+		blockClass += " reading";
+	}
+
+	if (Model.Show != AuthorMode.Default)
+	{
+		blockClass += " no-adders";
+	}
 }
 
-<div class="block @if(block.ID == Model.ReadingBlock) { @("reading") }" id="Block@(Model.BlockCounter)">
+<div class="@blockClass" id="Block@(Model.BlockCounter)">
 
 	<div class="goHistory">
 		<span class="paragraphCountTitle">
