--- a/Site/Presentation/Views/Season/Author/TellerPiece.cshtml
+++ b/Site/Presentation/Views/Season/Author/TellerPiece.cshtml
@@ -1,4 +1,5 @@
-﻿@using Structure.Helpers
+﻿@using Presentation.Helpers
+@using Structure.Helpers
 @model Presentation.Models.SeasonEditEpisodeModel
 
 @{
@@ -15,35 +16,57 @@
 
 <span class="paragraphPiece" id="Teller@(Model.TellerCounter)_Piece@(Model.PieceCounter)">
 	<span class="teller_@(piece.Style)">
-		@Html.TextBoxFor(m => 
-			m.Story
-				.BlockList[Model.BlockCounter]
-				.TellerList[Model.TellerCounter]
-				.Pieces[Model.PieceCounter].Style,
-			new {
-				@class = "lightback auxi",
-				rel = (
-					"block" + Model.BlockCounter
-					+ "_tellerStyle" + Model.TellerCounter
-					+ "_piece" + Model.PieceCounter
-				),
-				suggestion = "tellerStyle",
-				onfocus = "GetSuggestionBox(this)",
-				onblur = "ExitSuggestionBox(this)",
-				tabIndex = Model.TabIndex++
-			})
+		@if (Model.Show == AuthorMode.NoGender)
+		{
+			@Html.HiddenFor(m =>
+				m.Story
+					.BlockList[Model.BlockCounter]
+					.TellerList[Model.TellerCounter]
+					.Pieces[Model.PieceCounter].Style
+			)
+			<span class="auxi">
+				@(Model.Story
+					.BlockList[Model.BlockCounter]
+					.TellerList[Model.TellerCounter]
+					.Pieces[Model.PieceCounter].Style)
+			</span>
+		}
+		else
+		{
+			@Html.TextBoxFor(m =>
+				m.Story
+					.BlockList[Model.BlockCounter]
+					.TellerList[Model.TellerCounter]
+					.Pieces[Model.PieceCounter].Style,
+				new
+				{
+					@class = "lightback auxi",
+					rel = (
+						"block" + Model.BlockCounter
+						+ "_tellerStyle" + Model.TellerCounter
+						+ "_piece" + Model.PieceCounter
+						),
+					suggestion = "tellerStyle",
+					onfocus = "GetSuggestionBox(this)",
+					onblur = "ExitSuggestionBox(this)",
+					tabIndex = Model.TabIndex++
+				})
+		}
 
 		@Html.TextBoxFor(m => m.Story
 			.BlockList[Model.BlockCounter]
 			.TellerList[Model.TellerCounter]
 			.Pieces[Model.PieceCounter].Text,
 			new
-					{
+			{
 				@class = "text",
 				tabIndex = Model.TabIndex++
 			})
 
-		<adder tabIndex="@(Model.TabIndex++)"
+		@if (Model.Show == AuthorMode.Default)
+		{
+			<adder
+				tabIndex="@(Model.TabIndex++)"
 				class="adderPiece"
 				block="@Model.BlockCounter"
 				type="Piece"
@@ -53,6 +76,7 @@
 				piece="@Model.PieceCounter"
 				onclick="AddInputItem(this)"
 				url="@adderUrl">+</adder>
+		}
 	</span>
 
 	@{
