[SITE] audio: add link to pieces

--- a/Site/Presentation/Assets/css/screen_Main.css
+++ b/Site/Presentation/Assets/css/screen_Main.css
@@ -22,3 +22,11 @@
 .just-print {
 	display: none;
 }
+
+.play
+{
+	padding: 2px 2px 2px 3px;
+	cursor: pointer;
+	font-size: 70%;
+	border-radius: 4px;
+}
