[SITE] print: fix page number center

--- a/Site/Presentation/Assets/css/print_Print.css
+++ b/Site/Presentation/Assets/css/print_Print.css
@@ -57,7 +57,9 @@ p.title
 {
 	position: fixed;
 	bottom: 0;
-	left: 50%;
+	left: 0;
+	right: 0;
+	width: 100%;
 	text-align: center;
 	display: table-footer-group;
 }
