--- a/Site/Presentation/Assets/css/print_Print.css
+++ b/Site/Presentation/Assets/css/print_Print.css
@@ -11,7 +11,7 @@
 
 p.title
 {
-	margin: 30px 0 0px 0;
+	margin: 30px 0 0 0;
 }
 
 .scenes, .summary
@@ -40,8 +40,6 @@ p.title
 {
 	position: fixed;
 	top: 0;
-	left: 0;
-	right: 0;
 	width: 100%;
 	text-align: center;
 }
@@ -57,8 +55,6 @@ p.title
 {
 	position: fixed;
 	bottom: 0;
-	left: 0;
-	right: 0;
 	width: 100%;
 	text-align: center;
 	display: table-footer-group;
