--- a/Site/Presentation/Views/Season/Partial/PrintHeaderAndFooter.cshtml
+++ b/Site/Presentation/Views/Season/Partial/PrintHeaderAndFooter.cshtml
@@ -9,13 +9,14 @@
 
 <div class="just-print" style="counter-reset: page @startPage">
 	<div class="header">
+		<div class="title">
+			@Model.Title
+		</div>
+		<div class="cover-first-title"></div>
 		<div class="name">
 			MEAK
 		</div>
-		<div class="ep-name">
-			@Model.Title
-		</div>
-		<div class="ep-id">
+		<div class="id">
 			@Model.Season@Model
 		</div>
 	</div>
