[SITE] print: move title hide to outside header

--- a/Site/Presentation/Assets/css/print_Print.css
+++ b/Site/Presentation/Assets/css/print_Print.css
@@ -37,11 +37,13 @@ p.title
 	text-align: center;
 }
 
-.just-print .header .cover-first-title
+.just-print .cover-first-title
 {
 	position: absolute;
 	top: 0;
-	width: 100%;
+	width: 80%;
+	left: 10%;
+	right: 10%;
 	text-align: center;
 	height: 14pt;
 	background: #FFF;
